--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "homepage": "https://create-react-app-redux.now.sh",
   "scripts": {
-    "start": "NODE_PATH=src/ react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
